@@ -3,6 +3,7 @@
 #
 # Copyright (C) 2003,2004,2005,2006,2007 Keisuke Nishida
 # Copyright (C) 2008-2012 Roger While
+# Copyright (C) 2012 Simon Sobisch
 #
 # This file is part of GNU Cobol.
 #
@@ -19,8 +20,8 @@
 # You should have received a copy of the GNU General Public License
 # along with GNU Cobol.  If not, see <http://www.gnu.org/licenses/>.
 
-noinst_HEADERS = gettext.h
+noinst_HEADERS = gettext.h cobgetopt.h
 
 noinst_LIBRARIES = libsupport.a
-libsupport_a_SOURCES = dummymac.c
+libsupport_a_SOURCES = dummymac.c cobgetopt.c
 libsupport_a_LIBADD = @LIBOBJS@
