@@ -3,6 +3,12 @@
 	* MARK - Version 2.0
 	* Move to GPL/LGPL 3
 
+2012-05-09  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
+
+	* cobcrun.c : Added conversion for enabling options in WIN style;
+	  Use getopt for option parsing;
+	  Set LC_ALL "" for native messages
+
 2008-10-20  Roger While <simrw@sim-basis.de>
 
 	* cobcrun.c : Allow help and version options
